fix: truncate errors fixed

--- a/src/app/shared/components/news-item-card/news-item-card.scss
+++ b/src/app/shared/components/news-item-card/news-item-card.scss
@@ -60,6 +60,12 @@
     font-size: 0.85rem;
     color: rgba(0, 0, 0, 0.6);
     margin-top: 0.15rem;
+    box-sizing: border-box;
+    max-width: 100%;
+    white-space: normal;
+    overflow-wrap: anywhere;
+    overflow: hidden; // o overflow-x: auto si quieres scroll horizontal
+    hyphens: auto;
   }
   &__content {
     padding: 0.75rem 1rem 1rem;
@@ -68,6 +74,12 @@
     line-height: 1.4;
     flex: 1 1 auto;
     text-align: justify;
+    box-sizing: border-box;
+    max-width: 100%;
+    white-space: normal;
+    overflow-wrap: anywhere;
+    overflow: hidden; // o overflow-x: auto si quieres scroll horizontal
+    hyphens: auto;
   }
 
   &:hover {
